@@ -489,6 +489,12 @@ and
 (for
 .BR c++decl ).
 .TP
+.BR \-\-no-buffer-stdout " | " \-b
+Sets standard output to unbuffered.
+(This is a debugging aid for developers of
+.B cdecl
+itself.)
+.TP
 .BR \-\-no-config " | " \-C
 Suppresses reading of any configuration file,
 even one explicitly specified via either
